# soda

./: .gitignore  CMakeLists.txt  CMakePresets.json
ConfigTest/: CMakeLists.txt  main.cpp
SodaApp/: CMakeLists.txt
SodaApp/include/Soda/: App.h  Clock.h
SodaApp/src/: App.cpp  Clock.cpp
SodaBin/: CMakeLists.txt
SodaBin/CubeRenderer/: CMakeLists.txt  main.cpp
SodaBin/LineRenderer/: CMakeLists.txt  main.cpp
SodaBin/TriangleRenderer/: CMakeLists.txt  main.cpp
SodaLib/: CMakeLists.txt
SodaLib/include/Soda/: Color.h  Face.h  Fragment.h  Framebuffer.h  IO.h  Mat.h  MathUtils.h  Mesh.h  Rasterizer.h  Triangle.h  Vec.h  Vertex.h
SodaLib/src/Soda/: Color.cpp  Framebuffer.cpp  IO.cpp  Mat.cpp  MathUtils.cpp  Mesh.cpp  Rasterizer.cpp  Vec.cpp
SodaTinyBin/: CMakeLists.txt
SodaTinyBin/LineRenderer/: CMakeLists.txt  main.cpp
SodaTinyBin/TriangleRenderer/: CMakeLists.txt  main.cpp
SodaTinyLib/: CMakeLists.txt
SodaTinyLib/include/: Soda.h
SodaTinyLib/include/Soda/: Color.h  FrameBuffer.h  Line.h  MathUtils.h  PPM.h  Rasterizer.h  Triangle.h  Vec.h  Vertex.h
SodaTinyLib/src/Soda/: Color.cpp  FrameBuffer.cpp  Line.cpp  MathUtils.cpp  PPM.cpp  Rasterizer.cpp  Vec.cpp
SodaWindow/: CMakeLists.txt
SodaWindow/include/Soda/: Window.h
SodaWindow/src/: Window.cpp
soda-tiny/: CMakeLists.txt
soda-tiny/include/PPM/: FrameBuffer3.h  Renderer3.h
soda-tiny/src/: 260429.cpp  Color.h  main.cpp
soda-tiny/src/PPM/: FrameBuffer3.cpp  Renderer3.cpp
